--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,6 +6,8 @@ $icon-font-path: "/bower_components/bootstrap-sass-official/vendor/assets/fonts/
 @import "../bower_components/bootstrap-sass-official/vendor/assets/stylesheets/bootstrap.scss";
 // endbower
 
+@import "task";
+
 .browsehappy {
     margin: 0.2em 0;
     background: #ccc;
