--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,36 +1,46 @@
 <div class="header">
-  <ul class="nav nav-pills pull-right">
-    <li class="active"><a ng-href="#">Home</a></li>
-    <li><a ng-href="#">About</a></li>
-    <li><a ng-href="#">Contact</a></li>
-  </ul>
-  <h3 class="text-muted">todoApp</h3>
+  <div class="row">
+    <h3 class="text-muted col-md-6">ToDo</h3>
+    <div class="col-md-4 pull-right">
+      <select class="form-control" ng-model='selectedPlan' ng-options='plan as plan.name for plan in plans'></select>
+    </div>
+  </div>
 </div>
 
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
+<form role="form" ng-submit="saveAll()">
+  <div class="task row" ng-repeat="task in tasks | hideToBeDeleted">
+    <div class="col-md-10" ng-switch="!!task.isDirty()">
+      <input class="form-control" ng-model="task.text" ng-switch-when="true"/>
+      <p class="form-control-static date" ng-switch-when="false">{{task.text}}</p>
+    </div>
+    <div class="col-md-2">
+      <p class="form-control-static date">
+        <span class="glyphicon glyphicon-trash pull-right" ng-click="task.setToBeDeleted()"></span>
+        <span class="glyphicon glyphicon-pencil pull-right" ng-show="!task.isDirty()" ng-click="task.setAsDirty()"></span>
+      </p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12 add-task">
+      <a href="" ng-click="addTask()">Agregar nueva tarea</a>
+    </div>
+  </div>
+  <div class="row" ng-show="hasChanged()">
+    <div class="col-md-12 save-button">
+      <button type="submit" class="btn btn-primary">Guardar</button>
+    </div>
+  </div>
+</form>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
 
 <div class="footer">
-  <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+  <div class="row history">
+    <h4 class="col-md-12">Historal:</h4>
+    <span class="col-md-4">{{createdCount()}} tareas creadas</span>
+    <span class="col-md-4">{{updatedCount()}} tareas editadas</span>
+    <span class="col-md-4">{{deletedCount()}} tareas eliminadas</span>
+  </div>
+  <p>
+    <a href="" ng-click="resetCounters()" class="text-muted">reset</a>
+  </p>
 </div>
